--- a/package.json
+++ b/package.json
@@ -27,6 +27,5 @@
     "CHANGELOG.md"
   ],
   "type": "module",
-  "packageManager": "yarn@4.1.1",
-  "dependencies": {}
+  "packageManager": "yarn@4.1.1"
 }
